sync update from pokecube